# pirate-library

./: README.md  app.config.ts  bun.lockb  docker-compose.yml  nuxt.config.ts  package.json
.devcontainer/: docker-compose.yml
be/: Dockerfile  bun.lockb  index.ts  package-lock.json  package.json
be/rusted_files/: Dockerfile  config.yaml
be/rusted_files/rustedhttpd/: Cargo.toml  Dockerfile  README.md  config.yaml  test.sh
be/rusted_files/rustedhttpd/src/: main.rs
be/rusted_files/rustedhttpd/src/config/: mod.rs
be/rusted_files/rustedhttpd/src/files/: mod.rs
be/rusted_files/rustedhttpd/src/loggers_other_misc/: mod.rs
be/rusted_files/rustedhttpd/src/parsing/: mod.rs
be/rusted_files/rustedhttpd/src/structs/: mod.rs
be/rusted_files/web/: Summary_of_Can_t_Hurt_Me_by_David_Goggins_KokoRead_2018_KokoRead_bd9216326a9b8c09f67002fae4fe9b51_Anna_s_Archive.epub
fe/: Dockerfile  bun.lockb  nuxt.config.ts  package-lock.json  package.json
fe/pages/: index.vue  login.vue  register.vue  upload.vue
fe/pages/book/: [isbn].vue
fe/pages/search/: [query].vue
pages/: index.vue  login.vue  register.vue  success.vue
pages/book/: [isbn].vue
pages/search/: [query].vue
pirate-library_be/: docker-compose.yml
pirate-library_be/be/: index.ts  package-lock.json
pirate-library_be/be/rusted_files/: rustedhttpd
pirate-library_fe/: README.md  package-lock.json
