[package]
name = "rustedhttpd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.0"
serde = {version = "1.0.192", features = ["derive"]}
serde_yaml = "0.9.27"
tokio = { version = "1.12", features = ["full"] }

tokio-rustls = "0.22"
rustls = "0.19"
webpki = "0.21"